home/blog-tf/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-tf-svc
  namespace: blog-tf-system
  labels:
    app: blog-tf-svc
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: blog-tf-app
