home/blog-tf/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-tf-ingress
  namespace: blog-tf-system
  annotations:
    kubernetes.io/ingress.class: nginx-exposed
spec:
  rules:
  - host: blog.technically.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-tf-svc
            port:
              number: 80
